HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiPassByValueRequired/Expected.uv
//! Expected diagnostic metadata for the FfiPassByValueRequired rejected-source specimen.

expectedDiagnostic("E-TYP-2630", "diagnostics.23.ExternProcedureDiagnosticOwnership")
